--- a/nextjs-boilerplate-test-main/app/globals.css
+++ b/nextjs-boilerplate-test-main/app/globals.css
@@ -14,10 +14,26 @@
   }
 }
 
-body {
+/* body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+} */
+
+
+html.dark {
+  --background-color: black;
+  --text-color: white;
+}
+
+body {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+[data-theme="dark"] body {
+  background-color: #000;
+  color: #fff;
 }
 
 @layer utilities {
