--- a/nextjs-boilerplate-test-main/styles/header.module.css
+++ b/nextjs-boilerplate-test-main/styles/header.module.css
@@ -1,16 +1,17 @@
 .header {
-  background-color: #3d27e5;
+  background-color: #fff;
   padding: 1rem 2rem;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
   position: fixed;
   width: 100%;
+  height: 80px;
   top: 0;
   z-index: 100;
 }
 
 .container {
   display: flex;
-  justify-content: space-between; /* Ensures logo on left, nav links on right */
+  justify-content: space-between; /*Ensures logo on left, nav links on right*/
   align-items: center;
   width: 100%;  /* Full width of the header */
   max-width: 1200px; /* Optional: set max width for content */
@@ -18,7 +19,7 @@
 }
 
 .logo {
-  display: flex;
+  display: flex-start;
   align-items: center;
 }
 
@@ -26,15 +27,16 @@
   display: flex;
   justify-content: flex-end; /* Aligns the navigation to the right */
   align-items: center;
-  gap: 2rem; /* Space between navigation links */
+  gap: 10px; /*Space between navigation links */
+  max-width: 680px;
 }
 
 .nav a {
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-weight: 500;
   color: #333;
   text-decoration: none;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   position: relative;
 }
 
@@ -43,8 +45,8 @@
 }
 
 .linkedinIcon {
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   margin-left: 1rem;
   cursor: pointer;
   transition: transform 0.3s ease;
